test/libsolidity/syntaxTests/modifierAreas/mutability/invalid/redeclataion.sol
contract A {
    apply pure payable {}
}

// ----
// ParserError: (28-35): State mutability already specified as "pure".
